# microbit_sandbox

./: README.md
blinky_button_pac/: Cargo.toml  memory.x  rust-toolchain.toml
blinky_button_pac/.cargo/: config.toml
blinky_button_pac/src/: button.rs  main.rs
nrf_playground/: Cargo.toml  readme.md.txt
nrf_playground/src/: main.rs
